--- a/core/res/res/values/voltage_symbols.xml
+++ b/core/res/res/values/voltage_symbols.xml
@@ -95,4 +95,9 @@
     <!-- Pocket Service -->
     <java-symbol type="string" name="config_pocketJudgeVendorSensorName" />
 
+    <!-- LED stuff -->
+    <java-symbol type="bool" name="config_intrusiveBatteryLed" />
+    <java-symbol type="bool" name="config_multiColorBatteryLed" />
+    <java-symbol type="bool" name="config_ledCanPulse" />
+
 </resources>
