--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -31,6 +31,9 @@
     <!-- Content description indicating that tapping the element will allow deleting the screenshot [CHAR LIMIT=NONE] -->
     <string name="screenshot_delete_description">Delete screenshot</string>
 
+    <!-- Screenshot Delete Toast -->
+    <string name="delete_screenshot_toast">Screenshot deleted</string>
+
     <!-- Status bar tuner -->
     <string name="status_bar_items_title">Status bar icons</string>
 
