--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -36,6 +36,7 @@
 
     <!-- Status bar tuner -->
     <string name="status_bar_items_title">Status bar icons</string>
+    <string name="status_bar_vpn">VPN</string>
 
     <!-- Alert slider extras -->
     <string name="volume_ringer_priority_only">Priority</string>
