SystemUI: Alert slider: Introduce user interface for Alert Sliders
Ported from OxygenOS and reworked for our alert slider
implementation. We target AudioManager instead of Zen,
icons are also the same as aosp and the dialog uses the
material theme as well as support for our themes.

To use, the alert slider config must be enabled. By default,
the dialog shows on the left side. To move it to the right
side, set the location config to 1.

Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: I69dd059b717a4fba244ad2da439fc041e99ad652
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/core/res/res/values/voltage_symbols.xml
+++ b/core/res/res/values/voltage_symbols.xml
@@ -53,4 +53,11 @@
 
     <!-- Location indicator -->
     <java-symbol type="drawable" name="stat_sys_location" />
+
+    <!-- Whether device has physical tri state switch -->
+    <java-symbol type="bool" name="config_hasAlertSlider" />
+
+    <!-- The location of the devices physical tri state switch -->
+    <java-symbol type="integer" name="config_alertSliderLocation" />
+
 </resources>
