AlertSlider: refactor to reflect slider state
As there is the possibility of having more option values
for the alertslider (such as various zen mode states)
in addition to the current ringer mode states,
update logic to reflect the value slider's position is
set to instead of the ringer state we were using before.

Change-Id: I086549c8fbcbcc213b2964dca8d7979fcb64932b
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -37,4 +37,8 @@
     <!-- Status bar tuner -->
     <string name="status_bar_items_title">Status bar icons</string>
 
+    <!-- Alert slider extras -->
+    <string name="volume_ringer_priority_only">Priority</string>
+    <string name="volume_ringer_alarms_only">Alarms</string>
+
 </resources>
