base: Add Multi usb controller for Asus devices
All ROG devices have 2 usb port. We can use both for mtp, not only charger.

Change-Id: Ib9d8e1e6916eda4f3504c2e198841fb4c2b3fb43
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/core/res/res/values/voltage_config.xml
+++ b/core/res/res/values/voltage_config.xml
@@ -78,4 +78,8 @@
 
     <!-- Enable face auth only when swiping security view -->
     <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
+
+    <!-- Switch USB controller on Asus ROG devices-->
+    <bool name="config_switchUsbController">false</bool>	
+
 </resources>
