--- a/core/res/res/values/voltage_config.xml
+++ b/core/res/res/values/voltage_config.xml
@@ -139,4 +139,8 @@
     <integer name="config_proximityCheckTimeout">250</integer>
     <bool name="config_proximityCheckOnWakeEnabledByDefault">false</bool>
 
+  <!-- List of system apps that are allowed to be locked with app lock.
+        Use with extreme caution. -->
+  <string-array name="config_appLockAllowedSystemApps" translatable="false" />
+
 </resources>
