--- a/packages/SystemUI/res/values/voltage_config.xml
+++ b/packages/SystemUI/res/values/voltage_config.xml
@@ -69,4 +69,8 @@
           <item>255,33</item>
           -->
     </string-array>
+
+    <!-- Whether show refresh rate QS tile -->
+    <bool name="config_showRefreshRateQsTile">false</bool>
+
 </resources>
