--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -39,6 +39,7 @@
     <string name="status_bar_call_strength">Call strength</string>
     <string name="status_bar_data_saver">Data saver</string>
     <string name="status_bar_vpn">VPN</string>
+    <string name="status_bar_roaming">Roaming indicator</string>
 
     <!-- Alert slider extras -->
     <string name="volume_ringer_priority_only">Priority</string>
