--- a/packages/SystemUI/res/values/voltage_config.xml
+++ b/packages/SystemUI/res/values/voltage_config.xml
@@ -20,4 +20,6 @@
          Leave 1 if you have mA, put 1000 if you have µA-->
     <integer name="config_battCurrentDivider" translatable="false">1000</integer>
 
+    <!-- Preferred max refresh rate at AOD & Ambient Display, if supported by the display. -->
+    <integer name="config_aodMaxRefreshRate">-1</integer>
 </resources>
