base: Introduce automated Sleep Mode [1/2]
[cjh1249131356]:
- Adapt to S
- Dropped AOD toggle in favor of scheduled AOD feature
- Dropped Aggressive battery toggle

VOS: adapt qs tile to A13
Change-Id: I85fc36e6db7ceeca1a1031f71f3882a776864814
Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -148,4 +148,7 @@
     <string name="accessibility_quick_settings_caffeine_off">Caffeine off</string>
     <string name="accessibility_quick_settings_caffeine_on">Caffeine on</string>
 
+    <!-- Sleep Mode -->
+    <string name="quick_settings_sleep_mode_label">Sleep Mode</string>
+
 </resources>
