Add partial/full screenshot QS tile
[micky387]
 * edit to the new A12 Tiles API
 * Add secondaryLabel for the long press screenshot tile

Change-Id: I9b69f2ec9a9bcefd7b0ab503d9661fe797b2aa7b

* (@Stallix) - Adapt for A13 QPR1 (after 693478bd5295e2cef3a9755af08585dc780daef2).

Co-authored-by: maxwen <max.weninger@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -198,4 +198,6 @@
     <string name="quick_settings_aod_off_label">AOD off</string>
     <string name="quick_settings_aod_off_powersave_label">AOD off\nBattery saver</string>
 
+    <!-- Screenshot Tile -->
+    <string name="screenshot_long_press">Long press for partial screenshot</string>
 </resources>
