--- a/packages/SystemUI/res/values/voltage_config.xml
+++ b/packages/SystemUI/res/values/voltage_config.xml
@@ -29,6 +29,9 @@
     <!-- Doze: does the long press sensor need a proximity check? -->
     <bool name="doze_long_press_proximity_check">false</bool>
 
+    <!-- Doze: does the pickup sensor need a proximity check? -->
+    <bool name="doze_pickup_event_proximity_check">false</bool>
+
     <!-- Whether usage of the proximity sensor during doze is supported -->
     <bool name="doze_proximity_sensor_supported">true</bool>
 </resources>
