--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -125,4 +125,10 @@
         android:key="alarm_clock"
         android:title="@string/status_bar_alarm" />
 
+    <com.android.systemui.tuner.ClockPreference
+        android:icon="@drawable/ic_statusbar_clock"
+        android:title="@string/tuner_time"
+        android:summary="%s"
+        android:entries="@array/clock_options" />
+
 </PreferenceScreen>
